ex-handin4/assets/css/style.css
*{
  margin: 0;
  padding: 0;
  text-decoration: none;
  color: black;
}

body, body * {
cursor: url(https://files.cargocollective.com/644783/kimkim_cursor_green2.cur) 12 10, auto;
}

html{
  font-size: 10px;
  margin: 2em 2em 2em 2em;
}

header {
  width: calc(100vw - 2em);
  height: 4em;
  /* margin: 1em 4em 0em 4em; */
  /* outline: 3px solid black; */
}

nav {
  position: fixed;
  display: flex;
  flex-direction: row;
  padding: 1em 1em 2em 2em;
}

a#home,
a#info,
a#sidenotes {
  /* justify-content: center;
  align-items: center; */
  padding-right: 20px;
}

main {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: calc(100vw - 4em);
  height: 100vh;
}

p{
  font-size: 2rem;
  line-height: 1.15;
  font-family: serif;
  font-weight: normal;
  /* text-align: justify; */
}

h1 {
  font-size: 2rem;
  line-height: 1;
  font-family: serif;
  font-weight: normal;
}

h2 {
  font-family: 'Cutive Mono', monospace;
  letter-spacing: 0.1px;
  font-size: 2.5rem;
  line-height: 1.1;
  font-weight: normal;
  color: black;
}

h2:hover {
  /* opacity: 0.2; */
  font-style: italic;
}

h3 {
  font-size: 2rem;
  line-height: 1;
  font-family: serif;
  font-weight: normal
}

/* custom underline */
.customunderline {
  display: inline-block;
  position: relative;
}
.customunderline::after {
  content: '';
  position: absolute;
  left: 0;
  display: inline-block;
  height: 1em;
  width: 100%;
  border-bottom: 1px solid;
  margin-top: 1px;
}

.weight-normal {
  font-weight: normal;
}

.textcenter {
  text-align: center;
}

.aligncenter {
  justify-content: center;
  align-items: center;
}

article {
  top: 75px;
  font-size: 2rem;
  font-family: sans-serif;
  line-height: 1;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
  padding: 15px 0 0 0;
}

#imgkimdrawing {
  padding-top: 0 !important;
}

.sidebyside {
  display: flex;
  justify-content: center;
  align-items: center;
  align-items: space-between;

}

.video-responsive{
    overflow:hidden;
    padding-bottom:56.25%;
    position:relative;
    height:0;
}
.video-responsive iframe{
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
}

.vhsize {
  height: 100vh;
  width: auto;
}

article#one {
  /* background: red; */
  flex: 1;
  width: 100vw;
  height: 100vh;
  padding: 0.7em 1em 2em 1em;

}

article#two {
  /* background: blue; */
  flex: 2;
  width: 100vw;
  height: 100vh;
  padding: 0.7em 1em 2em 1em;
}

/* double-scrool sidenotes */
section {
  position: fixed;
  width: calc(50% - 4em);
  left: 0;
  overflow-y: auto;
  height: 100vh;
  padding: 0em 0em 0em 2.5em;
}

#right {
  left: 50%;
  padding: 0em 2.5em 0em 0em;
  }

/* @media [mobile] must always sit in the bottom of your css */
@media(max-width: 670px) {

  article {
    width: 100%;
    /* flex: 1; */
  }
/* make the double scrool into one coloum on mobile */
  section {
    position: static;
    top: 0;
    width: 100%;
    padding: 0;
    overflow: visible;
    height: auto;
  }
  #right {
    left: 0;
    top: 0;
  }

}

